--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -27,6 +27,7 @@
     <title>React App</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <!-- <base href="/build/"> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
